subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/valid/SingleLineComment_Valid_3.while

void main() {
     print 5;
}
//This is a single line comment with a newline after it

