subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/StringAssign_Invalid_2.while
void main() {
    string foo = "hello";
    foo[5] = 'z';
    print foo;
}

